--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
 					<div class="item">
 						<img src="images/project-DaDaTa.jpg" alt="" />
 
-						<h3>DaData</h3>
+						<h3>DaData (in progress)</h3>
 						<span class="category">Video &amp; AI Code - 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<a href="project-nightSky.html" class="permalink">
+			<a href="project-platonicForms.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-nightSky.jpg" alt="" />
+						<img src="images/project-platonicForms.jpg" alt="" />
 
-						<h3>Blue Sky Thinking</h3>
+						<h3>Platonic Forms (in progress)</h3>
 						<span class="category">Video &amp; AI Code - 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
@@ -143,8 +143,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-
-
 			<a href="project-androidsSheep.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -156,12 +154,12 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<a href="project-MLPorn.html" class="permalink">
+			<a href="project-nightSky.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-MLPorn.jpg" alt="" />
+						<img src="images/project-nightSky.jpg" alt="" />
 
-						<h3>Machine Learning Porn</h3>
+						<h3>Blue Sky Thinking</h3>
 						<span class="category">Video &amp; AI Code - 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
