--- a/project-platonicForms.html
+++ b/project-platonicForms.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - "Do Androids Dream of Electric Sheep?</title>
+	<title>Jake Elwes - Platonic Forms</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -80,14 +80,16 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">"Do Androids Dream of Electric Sheep?</h3>
-							<p class="project-desc">Video &amp; AI Code - London 2016</p>
+							<h3 class="border-top">Platonic Forms (in progress)</h3>
+							<p class="project-desc">Video &amp; AI Code - 2016
+</p>
 
-							<p>Neural networks are given thousands of images and effectively work out using their own means how to classify the different images, you can then ask the model to generate you an image from scratch, the essence of what the computer has learnt about what sheep look like.</p>
-							<h3 class="border-top">Machine learning porn</h3>
-
-							<p>Here a convolutional neural network has been trained using Yahoo’s explicit content model for finding pornography in their search engines, which is then back engineered to generate pornography from scratch (inspiration from Gabriel Goh).</p>
-
+							<p>The applied platonic form &amp; essence of - fields and skies, computer parts, toilets, spiritual places &amp; temples &amp; art.
+<br><br>
+I see this as the metaphysical problem of universals being visually realised using a digital model.
+<br><br>
+A convolutional neural network is trained to understand meaning and classify different objects after being fed many images, this can then be used to generate new instances &amp; discrete forms from scratch. But what if it is asked to generate in an abstract sense, the physics defying &amp; therefore impossible to visualise, universal form of a thing?
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -98,8 +100,8 @@
 							<h4 class="border-top">Materials</h4>
 							<p>
 								Public domain image dataset. <br><br>
-								Deep generator network github.com/Evolving-AI-Lab/synthesizing
-							</p>
+								PixelCNN/Deep Convolutional Generative Adversarial Neural Network (PPGN) running on Amazon EC2 GPU Server
+	</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -110,29 +112,33 @@
 
 			</div><!-- // .desktop-3 .nested -->
 
-			<div class="desktop-9 tablet-12 columns">
+			<div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;">
 
-				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-				<iframe id="vid" src="https://player.vimeo.com/video/196523279?color=ffffff&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<br></br>
-				<iframe id="vid2" src="https://player.vimeo.com/video/196523344?title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<br></br>
-
-
-
-				<script>
-					function resizeDivs() {
-						$('#vid').css("height", $('#vid').width()/1.6);
-						$('#vid2').css("height", $('#vid2').width()/1.6);
-					}
-					$(resizeDivs);
-					$(window).resize(resizeDivs);
-				</script>
-
-				<img src="images/project-androidsSheep/1-a.jpg" alt="" />
-				<img src="images/project-MLPorn/2.jpg" alt="" />
-
+	fields and skies:
+					<video controls autoplay loop  style="width: 100%;">
+					  <source src="images/project-platonicForms/skyField1.mp4" type="video/mp4">
+					  Your browser does not support the video tag.
+					</video>
+					computer parts:
+					<video controls autoplay loop  style="width: 100%;">
+						<source src="images/project-platonicForms/computers.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+					toilets:
+					<video controls autoplay loop  style="width: 100%;">
+						<source src="images/project-platonicForms/toilet.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+					spiritual places &amp; temples:
+					<video controls autoplay loop  style="width: 100%;">
+						<source src="images/project-platonicForms/spiritualSpace.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+					art:
+					<video controls autoplay loop  style="width: 100%;">
+						<source src="images/project-platonicForms/art.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
 
 			</div><!-- // .desktop-9 -->
 
