computer - computer self

--- a/project-platonicForms.html
+++ b/project-platonicForms.html
@@ -84,7 +84,7 @@
 							<p class="project-desc">Video &amp; AI Code - 2016
 </p>
 
-							<p>The applied platonic form &amp; essence of - fields and skies, computer parts, toilets, spiritual places &amp; temples &amp; art.
+							<p>The applied platonic form &amp; essence of - fields and skies, computer hardware (self-image), toilets, spiritual places &amp; temples &amp; art.
 <br><br>
 I see this as the metaphysical problem of universals being visually realised using a digital model.
 <br><br>
@@ -119,7 +119,7 @@ A convolutional neural network is trained to understand meaning and classify dif
 					  <source src="images/project-platonicForms/skyField1.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
-					computer parts:
+					computer hardware (self-image)
 					<video controls autoplay loop  style="width: 100%;">
 						<source src="images/project-platonicForms/computers.mp4" type="video/mp4">
 						Your browser does not support the video tag.
