--- a/project-platonicForms.html
+++ b/project-platonicForms.html
@@ -84,12 +84,10 @@
 							<p class="project-desc">Video &amp; AI Code - 2016
 </p>
 
-							<p>The applied platonic form &amp; essence of - fields and skies, computer hardware (self-image), toilets, spiritual places &amp; temples &amp; art.
+							<p>Can the Platonic concept of universal forms be visualised using a digital model? <br>
+These examples explore the essence of diverse objects and phenomena: fields &amp; skies, computer hardware, toilets and temples.
 <br><br>
-I see this as the metaphysical problem of universals being visually realised using a digital model.
-<br><br>
-A convolutional neural network is trained to understand meaning and classify different objects after being fed many images, this can then be used to generate new instances &amp; discrete forms from scratch. But what if it is asked to generate in an abstract sense, the physics defying &amp; therefore impossible to visualise, universal form of a thing?
-</p>
+A convolutional neural network is trained to understand meaning and classify different objects after being fed a multitude of images. This can then be used to generate new instances and discrete forms from scratch. But what if it is asked to generate - in an abstract sense - the physics defying (and therefore impossible to visualise) universal form of a thing?
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -132,11 +130,6 @@ A convolutional neural network is trained to understand meaning and classify dif
 					spiritual places &amp; temples:
 					<video controls autoplay loop  style="width: 100%;">
 						<source src="images/project-platonicForms/spiritualSpace.mp4" type="video/mp4">
-						Your browser does not support the video tag.
-					</video>
-					art:
-					<video controls autoplay loop  style="width: 100%;">
-						<source src="images/project-platonicForms/art.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video>
 
