--- a/project-DaDaTa.html
+++ b/project-DaDaTa.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - DaData</title>
+	<title>Jake Elwes - DaDaDa Ta</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -80,7 +80,7 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">DaData</h3>
+							<h3 class="border-top">DaDaDa Ta</h3>
 							<p class="project-desc">Video &amp; AI Code - 2016
 </p>
 
