--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<div class="item">
 						<img src="images/project-DaDaTa.jpg" alt="" />
 
-						<h3>DaData (in progress)</h3>
+						<h3>DaDaDa Ta (in progress)</h3>
 						<span class="category">Video &amp; AI Code - 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
