--- a/project-platonicForms.html
+++ b/project-platonicForms.html
@@ -112,12 +112,11 @@ A convolutional neural network is trained to understand meaning and classify dif
 
 			<div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;">
 
-	fields and skies:
 					<video controls autoplay loop  style="width: 100%;">
 					  <source src="images/project-platonicForms/skyField1.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
-					computer hardware (self-image)
+					<!-- computer hardware (self-image)
 					<video controls autoplay loop  style="width: 100%;">
 						<source src="images/project-platonicForms/computers.mp4" type="video/mp4">
 						Your browser does not support the video tag.
@@ -131,7 +130,7 @@ A convolutional neural network is trained to understand meaning and classify dif
 					<video controls autoplay loop  style="width: 100%;">
 						<source src="images/project-platonicForms/spiritualSpace.mp4" type="video/mp4">
 						Your browser does not support the video tag.
-					</video>
+					</video> -->
 
 			</div><!-- // .desktop-9 -->
 
