--- a/project-platonicForms.html
+++ b/project-platonicForms.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - Platonic Forms</title>
+	<title>Jake Elwes - Digital REM</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -80,14 +80,13 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">Platonic Forms (in progress)</h3>
+							<h3 class="border-top">Digital REM</h3>
 							<p class="project-desc">Video &amp; AI Code - 2016
 </p>
 
-							<p>Can the Platonic concept of universal forms be visualised using a digital model? <br>
-These examples explore the essence of diverse objects and phenomena: fields &amp; skies, computer hardware, toilets and temples.
-<br><br>
-A convolutional neural network is trained to understand meaning and classify different objects after being fed a multitude of images. This can then be used to generate new instances and discrete forms from scratch. But what if it is asked to generate - in an abstract sense - the physics defying (and therefore impossible to visualise) universal form of a thing?
+							<p>
+A convolutional neural network is trained to understand meaning and classify different objects after being fed a multitude of images. This can then be used to generate new instances and discrete forms from scratch. <br>But what if it is asked to generate - in an abstract sense - the physics defying (and therefore impossible to visualise) dream space from what it has learnt? <br> The AI is visualising a deeper level of cognition (the non-representaitonal essence of the many forms it has learnt), similar to that which we reach in our dreams through rapid eye movement (REM). Similar to abstraction in painting, but the computer is doing this autonomously.
+
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
