--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<div class="item">
 						<img src="images/project-platonicForms.jpg" alt="" />
 
-						<h3>Platonic Forms</h3>
+						<h3>Digital REM</h3>
 						<span class="category">Video &amp; AI Code - 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
