all images on left

--- a/project-haikuNews.html
+++ b/project-haikuNews.html
@@ -74,11 +74,11 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 tablet-12 nested columns">
+			<div class="desktop-3 push-6 tablet-12 tablet-push-0 nested columns">
 
 				<div class="sidebar sticky">
 
-					<div class="desktop-3 tablet-12 columns">
+					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
 							<h3 class="border-top">Haiku News</h3>
@@ -93,7 +93,7 @@ An AI algorithm (convolutional neural network) writes haikus about images being 
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-12 columns">
+					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -117,8 +117,8 @@ Handwriting Recurrent Neural Network www.cs.toronto.edu/~graves/handwriting.html
 
 			</div><!-- // .desktop-3 .nested -->
 
-			<div id="pics" class="desktop-9 tablet-12 columns">
-
+			<div class="clear show-under-tablet"></div>
+			<div id="pics" class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
 				<script>
 				// ls -m | sed -e 's/, /", "/g'
