--- a/project-pornCircles.html
+++ b/project-pornCircles.html
@@ -73,7 +73,7 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 tablet-12 nested columns">
+			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
 
 				<div class="sidebar sticky">
 
