--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 				<h2>About</h2>
 			</div>
 			<div class="desktop-9 tablet-12 columns">
-				<p class="page-desc">Jake Elwes explores both Fine Art and Computer Science, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. </p>
+				<p class="page-desc">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. </p>
 			</div>
 		</div><!-- // .container -->
 
@@ -93,7 +93,7 @@
 							<img src="images/about_services01.png" alt="">
 						</div><!-- // .desktop-3 -->
 
-						<div class="desktop-6 tablet-6 columns">
+						<div class="desktop-9 tablet-6 columns">
 							<h4>Exhibitions</h4>
 							<p>
 							2017 - <a href="http://acudmachtneu.de/events/789/ask-something/">'Ask Something' - Acud Macht Neu</a>, Transmediale and CTM Vorspiel, Berlin <br>
@@ -114,11 +114,11 @@
 
 
 					<div class="item">
-						<div class="desktop-3 offset-3 tablet-6 tablet-offset-0 columns">
+						<div class="desktop-3 tablet-6 columns">
 							<img src="images/about_services02.png" alt="">
 						</div><!-- // .desktop-3 -->
 
-						<div class="desktop-6 tablet-6 columns">
+						<div class="desktop-9 tablet-6 columns">
 							<h4>Background</h4>
 							<p>
 							Born 1993.  <br> <br>
@@ -138,11 +138,11 @@
 
 
 					<div class="item">
-						<div class="desktop-3 push-6 tablet-6 tablet-push-0 columns">
+						<div class="desktop-3 tablet-6 columns">
 							<img src="images/about_services03.png" alt="">
 						</div><!-- // .desktop-3 -->
 
-						<div class="desktop-6 pull-3 tablet-6 tablet-pull-0 columns">
+						<div class="desktop-9 tablet-6 columns">
 							<h4>Further Qualifications</h4>
 							<p>
 								<b>‘The Neural Aesthetic - Machine Learning for Artists’</b>, School of Machines, Making &amp; Make-Believe, Berlin, 2016 <br>
@@ -161,11 +161,11 @@
 
 
 					<div class="item">
-						<div class="desktop-3 offset-3 tablet-6 tablet-offset-0 columns">
+						<div class="desktop-3 tablet-6 columns">
 							<img src="images/about_services04.png" alt="">
 						</div><!-- // .desktop-3 -->
 
-						<div class="desktop-6 tablet-6 columns">
+						<div class="desktop-9 tablet-6 columns">
 							<h4>Follow me</h4>
 							<p>
 							<ul id="social">
