--- a/project-breakingOut.html
+++ b/project-breakingOut.html
@@ -74,7 +74,7 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 tablet-12 nested columns">
+			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
 
 				<div class="sidebar sticky">
 
@@ -109,8 +109,9 @@
 
 			</div><!-- // .desktop-3 .nested -->
 
-			<div id="pics" class="desktop-9 tablet-12 columns">
-
+			<div class="clear show-under-tablet"></div>
+			<div id="pics" class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
+				
 				<script>
 				// ls -m | sed -e 's/, /", "/g'
 
