--- a/project-circuit.html
+++ b/project-circuit.html
@@ -73,7 +73,7 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 tablet-12 nested columns">
+			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
 
 				<div class="sidebar sticky">
 
@@ -107,7 +107,8 @@ Relief &amp; Intaglio prints made directly from circuit board surfaces. The circ
 
 			</div><!-- // .desktop-3 .nested -->
 
-			<div class="desktop-9 tablet-12 columns">
+			<div class="clear show-under-tablet"></div>
+<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
 				<img src="images/project-circuit/1.jpg" alt="" />
 				<img src="images/project-circuit/1b.jpg" alt="" />
