--- a/project-digitalWhisper.html
+++ b/project-digitalWhisper.html
@@ -73,7 +73,7 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 tablet-12 nested columns">
+			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
 
 				<div class="sidebar sticky">
 
@@ -112,7 +112,8 @@ Text to speech library.
 
 			</div><!-- // .desktop-3 .nested -->
 
-			<div class="desktop-9 tablet-12 columns">
+			<div class="clear show-under-tablet"></div>
+<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
 				<video controls autoplay loop  style="width: 100%;">
 				  <source src="images/project-digitalWhisper/whisperTweets2.mov" type="video/mp4">
