--- a/project-drawingTennis.html
+++ b/project-drawingTennis.html
@@ -73,7 +73,7 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 tablet-12 nested columns">
+			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
 
 				<div class="sidebar sticky">
 
@@ -111,7 +111,8 @@ back-end node.js server &amp; MongoDB
 
 			</div><!-- // .desktop-3 .nested -->
 
-			<div class="desktop-9 tablet-12 columns">
+			<div class="clear show-under-tablet"></div>
+<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
 				<img src="images/project-drawingTennis/1.jpg" alt="" />
 				<img src="images/project-drawingTennis/2.jpg" alt="" />
