--- a/project-platonicForms.html
+++ b/project-platonicForms.html
@@ -73,11 +73,13 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 tablet-12 nested columns">
+			<div class="desktop-3 push-6 tablet-12 tablet-push-0 nested columns">
+
+			<!-- <div class="desktop-3 tablet-12 nested columns"> -->
 
 				<div class="sidebar sticky">
 
-					<div class="desktop-3 tablet-12 columns">
+					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
 							<h3 class="border-top">Digital REM</h3>
@@ -91,7 +93,7 @@ A convolutional neural network is trained to understand meaning and classify dif
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-12 columns">
+					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -109,7 +111,11 @@ A convolutional neural network is trained to understand meaning and classify dif
 
 			</div><!-- // .desktop-3 .nested -->
 
-			<div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;">
+			<div class="clear show-under-tablet"></div>
+
+			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
+
+			<!-- <div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;"> -->
 
 					<video controls autoplay loop  style="width: 100%;">
 					  <source src="images/project-platonicForms/skyField1.mp4" type="video/mp4">
