--- a/project-videoParticles.html
+++ b/project-videoParticles.html
@@ -73,7 +73,7 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 tablet-12 nested columns">
+			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
 
 				<div class="sidebar sticky">
 
@@ -111,7 +111,8 @@ Custom Openframeworks program as input<br><br>
 
 			</div><!-- // .desktop-3 .nested -->
 
-			<div class="desktop-9 tablet-12 columns">
+			<div class="clear show-under-tablet"></div>
+<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
