--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			</div><!-- // .desktop-3 -->
 
 
-			<div class="clear"></div>
+			<div class="clear hide-under-tablet"></div>
 		</div><!-- // .container -->
 	</section><!-- // section#header -->
 
@@ -143,6 +143,9 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
+
 			<a href="project-androidsSheep.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -176,6 +179,9 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
+
 			<a href="project-haikuNews.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -186,7 +192,6 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
-
 
 
 			<a href="project-digitalTouch.html" class="permalink">
@@ -210,6 +215,9 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
+
+			<div class="clear hide-under-tablet"></div>
+
 
 			<a href="project-musicalTaxonomy2.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -246,6 +254,9 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
+
 
 			<a href="project-dataPlot.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -281,6 +292,9 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
+
+			<div class="clear hide-under-tablet"></div>
+
 
 
 			<a href="project-pornCircles.html" class="permalink">
@@ -319,6 +333,9 @@
 					</div><!-- // .desktop-4 -->
 				</a>
 
+				<div class="clear hide-under-tablet"></div>
+
+
 
 				<a href="project-breakingOut.html" class="permalink">
 					<div class="desktop-4 tablet-6 columns">
@@ -354,6 +371,7 @@
 					</div><!-- // .desktop-4 -->
 				</a>
 
+				<div class="clear hide-under-tablet"></div>
 
 
 				<a href="project-videoParticles.html" class="permalink">
