--- a/lab.html
+++ b/lab.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes</title>
+	<title>Jake Elwes - Lab</title>
 	<meta name="description" content="Artworks by Jake Elwes - investigating the role of technology in modern life. Jake is a UK based new media/digital artist. He is currently a student studying Fine Art Media at the Slade, UCL.">
 	<meta name="author" content="Jake Elwes">
 
@@ -125,161 +125,159 @@
 		<div class="container">
 
 
-			<a href="project-DaDaTa.html" class="permalink">
+			<a href="project-talk2017.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-DaDaTa.jpg" alt="" />
+						<img src="images/project-talk2017.jpg" alt="" />
 
-						<h3>DaDaDa Ta</h3>
+						<h3>A.I. &amp; Art Talk - London Creative Coding</h3>
+						<span class="category">Talk - March, 2017</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
+					<a href="project-androidsSheep.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-androidsSheep.jpg" alt="" />
+
+						<h3>"Do Androids Dream of Electric Sheep?</h3>
 						<span class="category">Video &amp; AI Code - 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<a href="project-platonicForms.html" class="permalink">
+			<a href="project-nightSky.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-platonicForms.jpg" alt="" />
+						<img src="images/project-nightSky.jpg" alt="" />
 
-						<h3>Digital REM</h3>
+						<h3>Blue Sky Thinking</h3>
 						<span class="category">Video &amp; AI Code - 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<a href="project-digitalWhisper.html" class="permalink">
+				<div class="clear hide-under-tablet"></div>
+
+			<a href="project-barberFugue.html" class="permalink">
+					<div class="desktop-4 tablet-6 columns">
+						<div class="item">
+							<img src="images/project-barberFugue.jpg" alt="" />
+
+							<h3>Barber Fugue</h3>
+							<span class="category">3D Animation - 2015</span>
+						</div><!-- // .item -->
+					</div><!-- // .desktop-4 -->
+				</a>
+
+					<a href="project-iPhoneTouch.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-digitalWhisper.jpg" alt="" />
+						<img src="images/project-iPhoneTouch.jpg" alt="" />
 
-						<h3>Digital Whispers</h3>
-						<span class="category">Sound &amp; Twitter API - 2016</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-			<div class="clear hide-under-tablet"></div>
-
-
-
-
-			<a href="project-AutoEncodedBuddha.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-AutoEncodedBuddha.jpg" alt="" />
-
-						<h3>Auto-Encoded Buddha</h3>
-						<span class="category">Video &amp; AI Code (collaboration) - 2016</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-
-
-			<a href="project-haikuNews.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-haikuNews.jpg" alt="" />
-
-						<h3>Haiku News</h3>
-						<span class="category">Web &amp; AI Code (collaboration) - 2016</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-
-			<a href="project-digitalTouch.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-digitalTouch.jpg" alt="" />
-
-						<h3>Digital Caress</h3>
-						<span class="category">Photographic Prints - 2015</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-			<div class="clear hide-under-tablet"></div>
-
-			<a href="project-circuit.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-circuit.jpg" alt="" />
-
-						<h3>circuit.</h3>
-						<span class="category">Relief Prints - 2015</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-
-
-			<a href="project-musicalTaxonomy2.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-musicalTaxonomy2.jpg" alt="" />
-
-						<h3>taxonomy of sound II</h3>
-						<span class="category">3D Prints - 2016</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-
-			<a href="project-musicalTaxonomy.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-musicalTaxonomy.jpg" alt="" />
-
-						<h3>taxonomy of sound</h3>
-						<span class="category">3D Prints - 2016</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-			<div class="clear hide-under-tablet"></div>
-
-
-			<a href="project-lineForWalk.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-lineForWalk.jpg" alt="" />
-
-						<h3>"Take a Line for a Walk</h3>
+						<h3>Behind The Screen</h3>
 						<span class="category">iPhone App - 2015</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
 
 
+			<a href="project-dataPlot.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-dataPlot.jpg" alt="" />
+
+						<h3>Big Data Plots</h3>
+						<span class="category">Ink Brush Plots - 2015</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+				<div class="clear hide-under-tablet"></div>
+
+			<a href="project-soundParticles.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-soundParticles.jpg" alt="" />
+
+						<h3>Musical Mesh</h3>
+						<span class="category">Real-time Sound Responsive Program - 2015</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
+			<a href="project-pornCircles.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-pornCircles.jpg" alt="" />
+
+						<h3>Porn Saturation</h3>
+						<span class="category">iPhone &amp; Desktop App - 2015</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
 
 
-				<a href="project-digitalBlood.html" class="permalink">
+				<a href="project-computerCrash.html" class="permalink">
 					<div class="desktop-4 tablet-6 columns">
 						<div class="item">
-							<img src="images/project-digitalBlood.jpg" alt="" />
+							<img src="images/project-computerCrash.jpg" alt="" />
 
-							<h3>Iris0x0a2e-Retina</h3>
-							<span class="category">Video - 2015</span>
+							<h3>Computer Crash</h3>
+							<span class="category">Sculpture - 2015 &amp; 2012</span>
+						</div><!-- // .item -->
+					</div><!-- // .desktop-4 -->
+				</a>
+
+
+				<div class="clear hide-under-tablet"></div>
+
+				<a href="project-drawingTennis.html" class="permalink">
+					<div class="desktop-4 tablet-6 columns">
+						<div class="item">
+							<img src="images/project-drawingTennis.jpg" alt="" />
+
+							<h3>Drawing Tennis</h3>
+							<span class="category">Interactive Web - 2015</span>
 						</div><!-- // .item -->
 					</div><!-- // .desktop-4 -->
 				</a>
 
 
 
-				<a href="project-breakingOut.html" class="permalink">
+
+				<a href="project-videoParticles.html" class="permalink">
 					<div class="desktop-4 tablet-6 columns">
 						<div class="item">
-							<img src="images/project-breakingOut.jpg" alt="" />
+							<img src="images/project-videoParticles.jpg" alt="" />
 
-							<h3>Breaking Out</h3>
-							<span class="category">Sculpture &amp; Digital Renders - 2014</span>
+							<h3>Analogue Video Emitting Digital Particles</h3>
+							<span class="category">Video &amp; Code (collaboration) - 2015</span>
 						</div><!-- // .item -->
 					</div><!-- // .desktop-4 -->
 				</a>
+			<a href="project-mappingFacebook.html" class="permalink">
+					<div class="desktop-4 tablet-6 columns">
+						<div class="item">
+							<img src="images/project-mappingFacebook.jpg" alt="" />
 
-	
+							<h3>Mapping Facebook</h3>
+							<span class="category">Digital Prints &amp; Code - 2013</span>
+						</div><!-- // .item -->
+					</div><!-- // .desktop-4 -->
+				</a>
+				<div class="clear hide-under-tablet"></div>
 
+				<a href="FacebookMap2016/index.html" class="permalink">
+					<div class="desktop-4 tablet-6 columns">
+						<div class="item">
+							<img src="images/project-mappingFacebook2.jpg" alt="" />
+
+							<h3>Mapping Facebook Interactive</h3>
+							<span class="category">Digital Prints &amp; Code - 2013</span>
+						</div>
+					</div>
+				</a> 
 
 
 
