--- a/project-talk2017.html
+++ b/project-talk2017.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - Breaking Out</title>
+	<title>Jake Elwes - A.I. &amp; Art Talk - London Creative Coding</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -31,7 +31,6 @@
 	<link href="includes/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 
 	<!--[if lt IE 8]>
@@ -74,58 +73,30 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
+			<div class="desktop-3 push-3 tablet-12 tablet-push-0 nested columns">
 
-				<div class="sidebar sticky">
-
-					<div class="desktop-3 tablet-12 columns">
-
-						<div class="box-info">
-							<h3 class="border-top">Breaking Out</h3>
-							<p class="project-desc">Sculpture &amp; Digital Renders - 2014
-</p>
-
-							<p>Laser-cut polyhedrons encage virtual forms suggesting the collision of digital and physical realms. The wooden cages are lined with digital prints of computer modelled sculptures (zbrush + cinema4D). These are rendered using advanced lighting techniques and other simulated physical phenomena.
-</p>
-						</div><!-- // .box-info -->
-
-					</div><!-- // .desktop-3 -->
-
-					<div class="desktop-3 tablet-12 columns">
-
-						<div class="box-info">
-							<h4 class="border-top">Materials</h4>
-							<p>
-								Mixed media sculptures (variable dimensions)
-
-							</p>
-						</div><!-- // .box-info -->
-
-					</div><!-- // .desktop-3 -->
-
-					<div class="clear"></div>
-
-				</div><!-- // .sticky -->
-
-			</div><!-- // .desktop-3 .nested -->
 
 			<div class="clear show-under-tablet"></div>
-			<div id="pics" class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
+<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
+				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-				<img width="60%" src="images/project-breakingOut/IMG_51922-1.jpg" alt="" />
-				
-				<script>
-				// ls -m | sed -e 's/, /", "/g'
+<iframe id="vid" width="100%" height="100%" src="https://www.youtube.com/embed/acjDB1kodms" frameborder="0" allowfullscreen></iframe>
 
-				var files = ["IMG_5064-1.JPG", "IMG_5081-1.JPG", "IMG_5107-1.JPG", "IMG_5129-1.JPG", "IMG_8587.jpg", "IMG_8634-1.jpg", "IMG_8773-1.jpg", "IMG_9344-1.jpg", "IMG_9373-1.jpg", "IMG_9415-1.jpg", "Screen Shot 2014-11-17 at 21.34.57-1.jpg", "Screen Shot 2015-05-03 at 01.05.26-1.jpg", "Screen Shot 2016-12-21 at 03.01.10-1.jpg", "Screen Shot 2016-12-21 at 03.05.07-1.jpg", "Screen Shot 2016-12-21 at 03.05.57-1.jpg", "ico wire overlay border-1.jpg", "ico wire overlay close-1.jpg", "wireframe 1-1.jpg", "zbrush-1.jpg"]
+				<!-- <img src="images/project-digitalTouch/Book.pdf" alt="" /> -->
 
-				for (file in files) {
-					var src = 'images/project-breakingOut/' + files[file]
-					$("#pics").append('<img width="70%" src="'+ src +'" alt=""/>')
-					// $('body').prepend('<img id="gif2" src="'+ src +'" width="100%" height="100%"/>')
-				}
+				<br><br><br>
+				<embed id="pdf" src="ldncc2017.pdf" width="100%" height="150px" type='application/pdf'>
 
-				</script>
+					<script>
+						function resizeDivs() {
+							$('#pdf').css("height", $('#pdf').width()*0.7);
+							$('#vid').css("height", $('#pdf').width()*0.5);							
+						}
+						$(resizeDivs);
+						$(window).resize(resizeDivs);
+					</script>
+
+
 			</div><!-- // .desktop-9 -->
 
 			<div class="clear"></div>
