--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - Digital REM</title>
+	<title>Jake Elwes - Latent Space</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -82,12 +82,15 @@
 					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">Digital REM</h3>
-							<p class="project-desc">Video &amp; AI Code - 2016
+							<h3 class="border-top">Latent Space</h3>
+							<p class="project-desc">Video &amp; Neural Network - 2016
 </p>
 
 							<p>
-A convolutional neural network is trained to understand meaning and classify different objects after being fed a multitude of images. This can then be used to generate new instances and discrete forms from scratch. <br>But what if it is asked to generate - in an abstract sense - the physics defying (and therefore impossible to visualise) dream space from what it has learnt? <br> The AI is visualising a deeper level of cognition (the non-representaitonal essence of the many forms it has learnt), similar to that which we reach in our dreams through rapid eye movement (REM). Similar to abstraction in painting, but the computer is doing this autonomously.
+								A Deep Convolutional Generative Adversarial Neural Network is an A.I. algorithm used to generate images based on how the human brain works. It is trained by being fed 14.2 million photographs, and mimics the way we learn by self-forming connections and making sense out of data. <br>
+
+								Once the A.I. has built a map of neural pathways to comprehend the data set, it can start dreaming in the areas between and beyond what it has learnt from us. An abstracted digital subconscious conceiving of new images and visualising a ‘latent space’. <br>
+								Extract from 30 minute film.
 
 						</div><!-- // .box-info -->
 
@@ -121,6 +124,7 @@ A convolutional neural network is trained to understand meaning and classify dif
 					  <source src="images/project-platonicForms/skyField1.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
+					<br>
 					<!-- computer hardware (self-image)
 					<video controls autoplay loop  style="width: 100%;">
 						<source src="images/project-platonicForms/computers.mp4" type="video/mp4">
