--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<a href="project-platonicForms.html" class="permalink">
+			<a href="project-latentSpace.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
 						<img src="images/project-platonicForms.jpg" alt="" />
 
-						<h3>Digital REM</h3>
-						<span class="category">Video &amp; AI Code - 2016</span>
+						<h3>Latent Space</h3>
+						<span class="category">Video &amp; Neural Network - 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -278,7 +278,7 @@
 					</div><!-- // .desktop-4 -->
 				</a>
 
-	
+
 
 
 
