--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -126,7 +126,7 @@
 					$(window).resize(resizeDivs);
 				</script>
 
-				<img src="images/project-MLPorn/2.jpg" alt="" />
+				<img src="images/project-MLPorn/2.jpg" alt="Jake Elwes digital artist" />
 
 			</div><!-- // .desktop-9 -->
 
