--- a/project-androidsSheep.html
+++ b/project-androidsSheep.html
@@ -131,8 +131,8 @@
 					$(window).resize(resizeDivs);
 				</script>
 
-				<img src="images/project-androidsSheep/1-a.jpg" alt="" />
-				<img src="images/project-MLPorn/2.jpg" alt="" />
+				<img src="images/project-androidsSheep/1-a.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-MLPorn/2.jpg" alt="Jake Elwes digital artist" />
 
 
 			</div><!-- // .desktop-9 -->
