--- a/project-breakingOut.html
+++ b/project-breakingOut.html
@@ -112,7 +112,7 @@
 			<div class="clear show-under-tablet"></div>
 			<div id="pics" class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img width="60%" src="images/project-breakingOut/IMG_51922-1.jpg" alt="" />
+				<img width="60%" src="images/project-breakingOut/IMG_51922-1.jpg" alt="Jake Elwes digital artist" />
 				
 				<script>
 				// ls -m | sed -e 's/, /", "/g'
@@ -121,7 +121,7 @@
 
 				for (file in files) {
 					var src = 'images/project-breakingOut/' + files[file]
-					$("#pics").append('<img width="70%" src="'+ src +'" alt=""/>')
+					$("#pics").append('<img width="70%" src="'+ src +'" alt="Jake Elwes digital artist"/>')
 					// $('body').prepend('<img id="gif2" src="'+ src +'" width="100%" height="100%"/>')
 				}
 
