--- a/project-computerCrash.html
+++ b/project-computerCrash.html
@@ -117,12 +117,12 @@ Photograms 20x30cm
 
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/project-computerCrash/1.jpg" alt="" />
-				<img src="images/project-computerCrash/2.jpg" alt="" />
-				<img src="images/project-computerCrash/3.jpg" alt="" />
-				<img src="images/project-computerCrash/4.jpg" alt="" />
-				<img src="images/project-computerCrash/5.jpg" alt="" />
-				<img src="images/project-computerCrash/6.jpg" alt="" />
+				<img src="images/project-computerCrash/1.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-computerCrash/2.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-computerCrash/3.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-computerCrash/4.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-computerCrash/5.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-computerCrash/6.jpg" alt="Jake Elwes digital artist" />
 
 			</div><!-- // .desktop-9 -->
 
