--- a/project-digitalBlood.html
+++ b/project-digitalBlood.html
@@ -125,11 +125,11 @@
 				</script>
 
 				<br></br>
-				<img src="images/project-digitalBlood/Screen Shot 2016-12-20 at 00.54.46.jpg" alt="" />
-				<img src="images/project-digitalBlood/Screen Shot 2016-12-20 at 00.55.38.jpg" alt="" />
-				<img src="images/project-digitalBlood/Screen Shot 2016-12-20 at 00.56.02.jpg" alt="" />
-				<img src="images/project-digitalBlood/Screen Shot 2016-12-20 at 00.56.15.jpg" alt="" />
-				<img src="images/project-digitalBlood/Screen Shot 2016-12-20 at 00.56.22.jpg" alt="" />
+				<img src="images/project-digitalBlood/Screen Shot 2016-12-20 at 00.54.46.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-digitalBlood/Screen Shot 2016-12-20 at 00.55.38.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-digitalBlood/Screen Shot 2016-12-20 at 00.56.02.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-digitalBlood/Screen Shot 2016-12-20 at 00.56.15.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-digitalBlood/Screen Shot 2016-12-20 at 00.56.22.jpg" alt="Jake Elwes digital artist" />
 
 			</div><!-- // .desktop-9 -->
 
