--- a/project-digitalWhisper.html
+++ b/project-digitalWhisper.html
@@ -136,8 +136,8 @@ Text to speech library.
 					src="images/project-digitalWhisper/sound/digitalWhisper4.mp3">
 				Your user agent does not support the HTML5 Audio element.
 				</audio><br><br>
-				<img src="images/project-digitalWhisper/1.png" alt="" />
-				<img src="images/project-digitalWhisper/2.png" alt="" />
+				<img src="images/project-digitalWhisper/1.png" alt="Jake Elwes digital artist" />
+				<img src="images/project-digitalWhisper/2.png" alt="Jake Elwes digital artist" />
 
 			</div><!-- // .desktop-9 -->
 
