--- a/project-drawingTennis.html
+++ b/project-drawingTennis.html
@@ -114,13 +114,13 @@ back-end node.js server &amp; MongoDB
 			<div class="clear show-under-tablet"></div>
 <div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/project-drawingTennis/1.jpg" alt="" />
-				<img src="images/project-drawingTennis/2.jpg" alt="" />
-				<img src="images/project-drawingTennis/3.jpg" alt="" />
-				<img src="images/project-drawingTennis/4.jpg" alt="" />
-				<img src="images/project-drawingTennis/5.jpg" alt="" />
-				<img src="images/project-drawingTennis/6.jpg" alt="" />
-				<img src="images/project-drawingTennis/7.jpg" alt="" />
+				<img src="images/project-drawingTennis/1.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-drawingTennis/2.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-drawingTennis/3.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-drawingTennis/4.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-drawingTennis/5.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-drawingTennis/6.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-drawingTennis/7.jpg" alt="Jake Elwes digital artist" />
 
 			</div><!-- // .desktop-9 -->
 
