--- a/project-haikuNews.html
+++ b/project-haikuNews.html
@@ -127,7 +127,7 @@ Handwriting Recurrent Neural Network www.cs.toronto.edu/~graves/handwriting.html
 
 				for (file in files) {
 					var src = 'images/project-haikuNews/' + files[file]
-					$("#pics").append('<img src="'+ src +'" alt=""/>')
+					$("#pics").append('<img src="'+ src +'" alt="Jake Elwes digital artist"/>')
 					// $('body').prepend('<img id="gif2" src="'+ src +'" width="100%" height="100%"/>')
 				}
 
