--- a/project-iPhoneTouch.html
+++ b/project-iPhoneTouch.html
@@ -111,9 +111,9 @@
 			<div class="clear show-under-tablet"></div>
 <div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/project-iPhoneTouch/inside1.jpg" width="48%" alt="" />  &nbsp;&nbsp;
-				<img src="images/project-iPhoneTouch/inside2.jpg" width="48%" alt="" />
-				<img src="images/project-iPhoneTouch/project-iPhoneTouch.jpg" alt="" />
+				<img src="images/project-iPhoneTouch/inside1.jpg" width="48%" alt="Jake Elwes digital artist" />  &nbsp;&nbsp;
+				<img src="images/project-iPhoneTouch/inside2.jpg" width="48%" alt="Jake Elwes digital artist" />
+				<img src="images/project-iPhoneTouch/project-iPhoneTouch.jpg" alt="Jake Elwes digital artist" />
 
 			</div><!-- // .desktop-9 -->
 
