--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -125,6 +125,9 @@
 					  Your browser does not support the video tag.
 					</video>
 					<br>
+
+					<img src="images/project-latentSpace/latent.jpg" alt="Jake Elwes digital artist" />
+					<img src="images/project-latentSpace/latent2.jpg" alt="Jake Elwes digital artist" />
 					<!-- computer hardware (self-image)
 					<video controls autoplay loop  style="width: 100%;">
 						<source src="images/project-platonicForms/computers.mp4" type="video/mp4">
