--- a/project-mappingFacebook.html
+++ b/project-mappingFacebook.html
@@ -139,7 +139,7 @@
 
 				for (file in files) {
 					var src = 'images/project-mappingFacebook/' + files[file]
-					$("#pics").append('<img src="'+ src +'" alt=""/>')
+					$("#pics").append('<img src="'+ src +'" alt="Jake Elwes digital artist"/>')
 					// $('body').prepend('<img id="gif2" src="'+ src +'" width="100%" height="100%"/>')
 				}
 
