--- a/project-musicalTaxonomy2.html
+++ b/project-musicalTaxonomy2.html
@@ -114,18 +114,18 @@ Openframeworks C++ program
 			<div class="clear show-under-tablet"></div>
 <div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/project-musicalTaxonomy2/1.jpg" width="80%" alt="" />
-				<img src="images/project-musicalTaxonomy2/1a.jpg" width="80%" alt="" />
-				<img src="images/project-musicalTaxonomy2/1b.jpg" width="80%" alt="" />
-				<img src="images/project-musicalTaxonomy2/1c.jpg" alt="" />
-				<img src="images/project-musicalTaxonomy2/1d.jpg" width="80%" alt="" />
-				<img src="images/project-musicalTaxonomy2/1e.jpg" width="80%" alt="" />
-				<img src="images/project-musicalTaxonomy2/2.jpg"  alt="" />
-				<img src="images/project-musicalTaxonomy2/3.jpg"  alt="" />
-				<img src="images/project-musicalTaxonomy2/4.jpg" alt="" />
-				<img src="images/project-musicalTaxonomy2/5.jpg" width="80%" alt="" />
-				<img src="images/project-musicalTaxonomy2/11.jpg"  alt="" />
-				<img src="images/project-musicalTaxonomy2/12.jpg"  alt="" />
+				<img src="images/project-musicalTaxonomy2/1.jpg" width="80%" alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/1a.jpg" width="80%" alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/1b.jpg" width="80%" alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/1c.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/1d.jpg" width="80%" alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/1e.jpg" width="80%" alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/2.jpg"  alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/3.jpg"  alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/4.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/5.jpg" width="80%" alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/11.jpg"  alt="Jake Elwes digital artist" />
+				<img src="images/project-musicalTaxonomy2/12.jpg"  alt="Jake Elwes digital artist" />
 
 			</div><!-- // .desktop-9 -->
 
