--- a/project-pornCircles.html
+++ b/project-pornCircles.html
@@ -109,34 +109,34 @@
 
 			<div class="desktop-9 tablet-12 columns">
 				139,352,631 Views - KIM KARDASHIAN SEX TAPE WITH RAY J
-				<img src="images/project-pornCircles/1.jpg" alt="" />
+				<img src="images/project-pornCircles/1.jpg" alt="Jake Elwes digital artist" />
 				<br>
 				49,150,362 Views - MILF FUCKS DAUGHTERS BOYFRIEND
-				<img src="images/project-pornCircles/2.jpg" alt="" />
+				<img src="images/project-pornCircles/2.jpg" alt="Jake Elwes digital artist" />
 				<br>
 				48,868,179 Views - TEEN MOM FARRAH ABRAHAM SEX VIDEO
-				<img src="images/project-pornCircles/3.jpg" alt="" />
+				<img src="images/project-pornCircles/3.jpg" alt="Jake Elwes digital artist" />
 				<br>
 				45,300,861 Views - KIM K SEX TAPE PART 2
-				<img src="images/project-pornCircles/4.jpg" alt="" />
+				<img src="images/project-pornCircles/4.jpg" alt="Jake Elwes digital artist" />
 				<br>
 				43,589,343 Views - LATINA SQUIRTS WHILE GETTING CREAMPIED
-				<img src="images/project-pornCircles/5.jpg" alt="" />
+				<img src="images/project-pornCircles/5.jpg" alt="Jake Elwes digital artist" />
 				<br>
 				40,051,505 Views - INTENSE ANAL FUCKING
-				<img src="images/project-pornCircles/6.jpg" alt="" />
+				<img src="images/project-pornCircles/6.jpg" alt="Jake Elwes digital artist" />
 				<br>
 				37,991,743 Views - BIG BOOBS SHIONE COOPER RIDES MARK'S STIFF DICK
-				<img src="images/project-pornCircles/7.jpg" alt="" />
+				<img src="images/project-pornCircles/7.jpg" alt="Jake Elwes digital artist" />
 				<br>
 				36,355,897 Views - CHARITY TAKES IT HARD FOR AN ANAL CREAMPIE
-				<img src="images/project-pornCircles/8.jpg" alt="" />
+				<img src="images/project-pornCircles/8.jpg" alt="Jake Elwes digital artist" />
 				<br>
 				33,950,378 Views - STEP BROTHER TAKES ADVANTAGE OF LITTLE SISTER
-				<img src="images/project-pornCircles/9.jpg" alt="" />
+				<img src="images/project-pornCircles/9.jpg" alt="Jake Elwes digital artist" />
 				<br>
 				30,745,787 Views - MIA KHALIFA STEPMOM JULIANA VEGA FUCKS AND SUCKS HER BOYFRIENDS COCK
-				<img src="images/project-pornCircles/10.jpg" alt="" />
+				<img src="images/project-pornCircles/10.jpg" alt="Jake Elwes digital artist" />
 
 			</div><!-- // .desktop-9 -->
 
