--- a/project-videoParticles.html
+++ b/project-videoParticles.html
@@ -126,14 +126,14 @@ Custom Openframeworks program as input<br><br>
 	$(resizeDivs);
 	$(window).resize(resizeDivs);
 </script>
-<img src="images/project-videoParticles/1.jpg" alt="" />
-<img src="images/project-videoParticles/2.jpg" alt="" />
-<img src="images/project-videoParticles/3.jpg" alt="" />
-<img src="images/project-videoParticles/4.jpg" alt="" />
-<img src="images/project-videoParticles/5.jpg" alt="" />
-<img src="images/project-videoParticles/6.jpg" alt="" />
-<img src="images/project-videoParticles/7.jpg" alt="" />
-<img src="images/project-videoParticles/8.jpg" alt="" />
+<img src="images/project-videoParticles/1.jpg" alt="Jake Elwes digital artist" />
+<img src="images/project-videoParticles/2.jpg" alt="Jake Elwes digital artist" />
+<img src="images/project-videoParticles/3.jpg" alt="Jake Elwes digital artist" />
+<img src="images/project-videoParticles/4.jpg" alt="Jake Elwes digital artist" />
+<img src="images/project-videoParticles/5.jpg" alt="Jake Elwes digital artist" />
+<img src="images/project-videoParticles/6.jpg" alt="Jake Elwes digital artist" />
+<img src="images/project-videoParticles/7.jpg" alt="Jake Elwes digital artist" />
+<img src="images/project-videoParticles/8.jpg" alt="Jake Elwes digital artist" />
 
 			</div><!-- // .desktop-9 -->
 
