--- a/project-circuit.html
+++ b/project-circuit.html
@@ -110,15 +110,15 @@ Relief &amp; Intaglio prints made directly from circuit board surfaces. The circ
 			<div class="clear show-under-tablet"></div>
 <div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/project-circuit/1.jpg" alt="" />
-				<img src="images/project-circuit/1b.jpg" alt="" />
-				<img src="images/project-circuit/1c.jpg" alt="" />
-				<img src="images/project-circuit/2.jpg" alt="" />
-				<img src="images/project-circuit/3.jpg" alt="" />
-				<img src="images/project-circuit/4.jpg" alt="" />
-				<img src="images/project-circuit/5.jpg" alt="" />
-				<img src="images/project-circuit/6.jpg" alt="" />
-				<img src="images/project-circuit/7.jpg" alt="" />
+				<img src="images/project-circuit/1.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-circuit/1b.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-circuit/1c.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-circuit/2.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-circuit/3.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-circuit/4.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-circuit/5.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-circuit/6.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-circuit/7.jpg" alt="Jake Elwes digital artist" />
 
 			</div><!-- // .desktop-9 -->
 
