--- a/project-soundParticles.html
+++ b/project-soundParticles.html
@@ -114,14 +114,14 @@
 
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/project-soundParticles/1.jpg" alt="" />
-				<img src="images/project-soundParticles/2.jpg" alt="" />
-				<img src="images/project-soundParticles/3.jpg" alt="" />
-				<img src="images/project-soundParticles/4.jpg" alt="" />
-				<img src="images/project-soundParticles/5.jpg" alt="" />
-				<img src="images/project-soundParticles/6.jpg" alt="" />
-				<img src="images/project-soundParticles/7.jpg" alt="" />
-				<img src="images/project-soundParticles/8.jpg" alt="" />
+				<img src="images/project-soundParticles/1.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-soundParticles/2.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-soundParticles/3.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-soundParticles/4.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-soundParticles/5.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-soundParticles/6.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-soundParticles/7.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-soundParticles/8.jpg" alt="Jake Elwes digital artist" />
 
 
 			</div><!-- // .desktop-9 -->
