--- a/project-talk2017.html
+++ b/project-talk2017.html
@@ -82,7 +82,7 @@
 
 <iframe id="vid" width="100%" height="100%" src="https://www.youtube.com/embed/acjDB1kodms" frameborder="0" allowfullscreen></iframe>
 
-				<!-- <img src="images/project-digitalTouch/Book.pdf" alt="" /> -->
+				<!-- <img src="images/project-digitalTouch/Book.pdf" alt="Jake Elwes digital artist" /> -->
 
 				<br><br><br>
 				<embed id="pdf" src="ldncc2017.pdf" width="100%" height="150px" type='application/pdf'>
