--- a/about.html
+++ b/about.html
@@ -96,6 +96,7 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Exhibitions</h4>
 							<p>
+							2017 - <a href="http://www.newcontemporaries.org.uk/news/1494889200/artists-announced-for-bloomberg-new-contemporaries-2017"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
 							2017 - <a href="http://acudmachtneu.de/events/789/ask-something/">'Ask Something' - Acud Macht Neu</a>, Transmediale and CTM Vorspiel, Berlin <br>
 							2016 - 'Slade Print Fair', Slade School of Fine Art, London <br>
 							2016 - ‘The Neural Aesthetic’, Acud Macht Neu, Berlin <br>
@@ -126,7 +127,7 @@
 							Education: <br>
 
 							<b>Slade School of Art (UCL)</b>, BA - Fine Art Media, 2013-17 <br>
-							<b>SAIC (School of the Art Institute Chicago)</b>, International Exchange - Art & Technology, 2015 <br>
+							<b>SAIC (School of the Art Institute Chicago)</b>, International Exchange - Art &amp; Technology, 2015 <br>
 							<b>Central St Martins (UAL)</b>, Foundation 2012-13 <br>
 						</p>
 						</div><!-- // .desktop-6 -->
