--- a/lab.html
+++ b/lab.html
@@ -84,7 +84,7 @@
 
 			<div class="desktop-4 tablet-6 columns">
 				<!-- icons to try for about fa-eye fa-male fa-plus -->
-				<a href="about.html" class="btn-social btn-outline"><p>ABOUT</p></a>
+				<a href="about.html" class="btn-social btn-outline"><p>ABOUT &amp; SHOWS</p></a>
 
 					<!-- <a href="about.html" class="btn-social btn-outline"><p>ABOUT<i class="fa fa-fw fa-eye" style="padding-left: 10px;font-size: 17px;"></i></p></a> -->
 			</div><!-- // .desktop-3 -->
@@ -277,7 +277,7 @@
 							<span class="category">Digital Prints &amp; Code - 2013</span>
 						</div>
 					</div>
-				</a> 
+				</a>
 
 
 
