--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Exhibitions</h4>
 							<p>
-							2017 - <a href="http://www.newcontemporaries.org.uk/news/1494889200/artists-announced-for-bloomberg-new-contemporaries-2017"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
+							2017 - <a href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
 							2017 - <a href="https://events.withgoogle.com/io-extended-2017-campus-london/"> Google I/O Extended 2017 (demo), Google Campus London <br>
 							2017 - <a href="http://acudmachtneu.de/events/789/ask-something/">'Ask Something' - Acud Macht Neu</a>, Transmediale and CTM Vorspiel, Berlin <br>
 							2016 - 'Slade Print Fair', Slade School of Fine Art, London <br>
